Ajoute de la vérification si utilisateur existe
